app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: app
  name: roran
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: app
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/db: "true"
        io.kompose.service: app
    spec:
      containers:
        - args:
            - python3
            - bot.py
          image: roran:v3.30.53
          name: roran
          imagePullPolicy: IfNotPresent
          resources: {}
      restartPolicy: Always
      volumes:
        - name: app-claim1
          persistentVolumeClaim:
            claimName: app-claim1
status: {}
