database-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: database
  name: db
spec:
  ports:
    - name: db
      port: 5433
      targetPort: 5432
  selector:
    io.kompose.service: database
status:
  loadBalancer: {}
